Remove deprecated methods, use the constants in Wizard panels